# langbly-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/langbly/: __init__.py  client.py
