[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langbly"
version = "0.1.0"
description = "Official Python SDK for the Langbly translation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Jasper de Winter", email = "jasper@langbly.com" },
]
keywords = ["translation", "api", "langbly", "google-translate", "i18n", "localization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://langbly.com"
Documentation = "https://langbly.com/docs"
Repository = "https://github.com/Langbly/langbly-python"
Issues = "https://github.com/Langbly/langbly-python/issues"
